--- a/_pages/thoughts.html
+++ b/_pages/thoughts.html
@@ -1,7 +1,7 @@
 ---
-title: Thoughts
-permalink: /thoughts/
 layout: archive
+permalink: /thoughts/
+title: "Posts"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
