--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-permalink: /thoughts/
-title: "Posts"
+permalink: /posts/
+title: "posts"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
